force-app/main/default/objects/Contact/fields/South_Africa_Id_Number__c.field-meta.xml
<CustomField>
    <fullName>South_Africa_Id_Number__c</fullName>
    <externalId>true</externalId>
    <label>South Africa Id Number</label>
    <precision>13</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
    <unique>true</unique>
</CustomField>