force-app/main/default/objects/Contact/fields/Times_Searched__c.field-meta.xml
<CustomField>
    <fullName>Times_Searched__c</fullName>
    <label>Times Searched</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>